@@ -26,7 +26,7 @@
 #define IPV4_FLAG_MF "Flag: More Fragments\n\nBit 2: (MF)\n\t0 = Last Fragment,\n\t1 = More Fragments.\n\n[RFC791]"
 #define IPV4_FRAGOFF "Fragment Offset\n\nThis field indicates where in the datagram this fragment belongs. The fragment offset is measured in units of 8 octets (64 bits). The first fragment has offset zero.\n\n[RFC791]"
 #define IPV4_TTL "Time to Live (TTL)\n\nThis field indicates the maximum time the datagram is allowed to remain in the internet system. If this field contains the value zero, then the datagram must be destroyed. This field is modified in internet header processing. The time is measured in units of seconds, but since every module that processes a datagram must decrease the TTL by at least one even if it process the datagram in less than a second, the TTL must be thought of only as an upper bound on the time a datagram may exist. The intention is to cause undeliverable datagrams to be discarded, and to bound the maximum datagram lifetime.\n\n[RFC791]"
-#define IPV4_PROTOCOL "Protocol\n\\nThis field indicates the next level protocol used in the data portion of the internet datagram. The values for various protocols are specified in 'Assigned Numbers'.\n\n[RFC791]"
+#define IPV4_PROTOCOL "Protocol\n\nThis field indicates the next level protocol used in the data portion of the internet datagram. The values for various protocols are specified in 'Assigned Numbers'.\n\n[RFC791]"
 #define IPV4_CHECKSUM "Header Checksum\n\nA checksum on the header only. Since some header fields change (e.g., time to live), this is recomputed and verified at each point that the internet header is processed.\n\nThe checksum algorithm is:\n\nThe checksum field is the 16 bit one's complement of the one's complement sum of all 16 bit words in the header. For purposes of computing the checksum, the value of the checksum field is zero.\n\nThis is a simple to compute checksum and experimental evidence indicates it is adequate, but it is provisional and may be replaced by a CRC procedure, depending on further experience.\n\n[RFC791]"
 #define IPV4_SOURCE "Source Address\n\nThe source address.\n\n[RFC791]"
 #define IPV4_DESTINATION "Destination Address\n\nThe destination address.\n\n[RFC791]"
